[tool.poetry]
name = "picsart-creative-apis-py-sdk"
version = "1.0.0"
description = "Picsart Creative APIs SDK. Includes helper methods and functions for Programmable Image APIs (e.g. Remove Background, Upscale, Enhance, Effects) and the GenAI APIs (e.g. Text2Image, Replace, Expand Image)."
authors = ["PicsArt, Inc."]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
furo = "2024.8.6"
sphinx_copybutton = "0.5.2"
sphinx-remove-toctrees = "1.0.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
ruff = "^0.7.4"
pytest-asyncio = "^0.24.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.isort]
profile = "black"

[tool.black]
exclude = '''
/(
    docs
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
