[metadata]
name = picsart-creative-apis-py-sdk
author = PicsArt, Inc.
description = Picsart Creative APIs SDK. Includes helper methods and functions for Programmable Image APIs (e.g. Remove Background, Upscale, Enhance, Effects) and the GenAI APIs (e.g. Text2Image, Replace, Expand Image).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PicsArt/picsart-creative-apis-python-sdk
project_urls =
    Bug Tracker = https://github.com/PicsArt/picsart-creative-apis-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    httpx>=0.27.2

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    sphinx==7.4.7
    furo==2024.8.6
    sphinx_copybutton==0.5.2
    sphinx-remove-toctrees==1.0.0.post1
dev =
    pytest>=8.3.3
    black>=24.10.0
    ruff>=0.7.4
    pytest-asyncio>=0.24.0
    isort>=5.13.2
    pre-commit>=4.0.1
